# trash_calendar

./: .gitignore  README.md  config.yml.example  main.py  pyproject.toml  requirements.txt
