[tool.poetry]
name = "trash-cal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "trash_cal"}]

[tool.poetry.dependencies]
python = "^3.11"
ics = "^0.7.2"
requests = "^2.28.2"
dataclass-wizard = "^0.22.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
